--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,40 @@
-name: iOS CI
+name: CI - iOS
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  test:
-    runs-on: macos-latest
+  build-and-test:
+    runs-on: macos-13
 
     steps:
-      - name: Checkout
+      - name: 🔄 Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.2'
+      - name: 🧰 Install dependencies
+        run: brew install swiftlint
 
-      - name: Install Slather
-        run: gem install slather
+      - name: 📦 Resolve Swift package dependencies
+        run: |
+          xcodebuild -resolvePackageDependencies -project Bank.xcodeproj
 
-      - name: Set up Xcode
-        run: sudo xcode-select -s /Applications/Xcode.app
+      - name: 🧪 Build project
+        run: |
+          xcodebuild build \
+            -scheme Bank \
+            -destination 'platform=iOS Simulator,name=iPhone 16' \
+            -derivedDataPath ./DerivedData
 
-      - name: Run tests with coverage
+      - name: 🧪 Run tests with code coverage
         run: |
           xcodebuild test \
             -scheme Bank \
-            -destination 'platform=iOS Simulator,name=iPhone 14' \
-            -enableCodeCoverage YES
+            -destination 'platform=iOS Simulator,name=iPhone 16' \
+            -enableCodeCoverage YES \
+            -derivedDataPath ./DerivedData
 
-      - name: Run Slather
-        run: slather
+      - name: ✅ Run SwiftLint
+        run: swiftlint
